# simple-restaurant-rs

./: .env  .gitignore  Cargo.toml  README.md
docker/: compose.yaml
docker/sql/: init.sql
src/: config.rs  main.rs
src/api/: mod.rs
src/domain/: item.rs
src/model/: item_model.rs  mod.rs
src/protocol/: item.rs
