[package]
name = "simple-restaurant-rs"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4.3"
async-trait = "0.1"
config = "0.13.1"
deadpool-postgres = { version = "0.10.2", features = ["serde"] }
dotenv = "0.15.0"
env_logger = "0.10"
log = "0.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio-postgres = "0.7.6"
